--- a/assets/less/header.less
+++ b/assets/less/header.less
@@ -1,6 +1,5 @@
 body > header {
   position: relative;
-  text-align: center;
   color: white;
   background-color: rgba(0, 0, 0, 0.5);
   padding-top: 10px;
@@ -19,40 +18,38 @@ body > header {
 
   figure {
     display: inline;
-    width: 15%;
     margin-top: 0px;
-    position: absolute;
+    margin-right: 20px;
+    margin-left: 50px;
+    float: left;
     
     img {
       height: 150px;
     }
   }
 
-  section {
-    display: inline-block;
-    width: 70%;
-    padding: 0px;
-    
-    h1 {
-      display: block;
-      padding: 0;
-      margin: 0;
-      font-size: 6em;
-      font-weight: bold;
-      text-shadow: 3px 3px black;
-    }
+  h1 {
+    display: block;
+    padding: 0;
+    margin: 0;
+    font-size: 6em;
+    font-weight: bold;
+    text-shadow: 3px 3px black;
+  }
 
-    p {
-      display: block;
-      font-size: 2em;
-      text-shadow: 3px 3px black;
-      margin-bottom: 0;
-    }
+  p {
+    display: block;
+    font-size: 2em;
+    text-shadow: 3px 3px black;
+    margin-bottom: 0;
   }
 
   @media(min-width: @screen-md) {
+    figure {
+      margin-left: 15%;
+    }
     height: 260px;
-    padding-top: 70px; 
+    padding-top: 70px;
   }
  }
 
